# agent-trace

./: .gitignore  FUNDING.yml  LICENSE  README.md  __init__.py  agent_trace.py  agent_trace_cli.py  pyproject.toml  setup.py
.github/: FUNDING.yml
