[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-trace"
version = "0.1.0"
description = "CLI tool for tracing and debugging AI agent decisions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "gardvori", email = "gardvori@users.noreply.github.com"},
]
keywords = ["ai", "agent", "tracing", "debugging", "observability", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.scripts]
agent-trace = "agent_trace:main"

[project.urls]
Homepage = "https://github.com/gardvori/agent-trace"
Repository = "https://github.com/gardvori/agent-trace"
Issues = "https://github.com/gardvori/agent-trace/issues"
